Fixed bug #51997 (SEEK_CUR with 0 value, returns a warning).